<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/secondary"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/iv_character"
            android:layout_width="108dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/rick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_character"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_character_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/character_name"
                android:textColor="@color/secondary"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="@+id/tv_character_name"
                app:layout_constraintStart_toStartOf="@+id/tv_character_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_character_name" />

            <TextView
                android:id="@+id/tv_last_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_known_location"
                android:textSize="12sp"
                android:textColor="@color/gray"
                app:layout_constraintEnd_toEndOf="@+id/tv_character_name"
                app:layout_constraintStart_toStartOf="@+id/tv_character_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_status" />

            <TextView
                android:id="@+id/tv_lastlocation_get"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/earth_replacement_dimension"
                android:textColor="@color/secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_last_location"
                app:layout_constraintStart_toStartOf="@+id/tv_last_location"
                app:layout_constraintTop_toBottomOf="@+id/tv_last_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>